docs: user.go
