# docs/swagger.yaml
@@ -1,4 +1,18 @@
 definitions:
+  auth.LoginCredentials:
+    properties:
+      password:
+        type: string
+      username:
+        type: string
+    type: object
+  auth.LoginResponse:
+    properties:
+      access_token:
+        type: string
+      refresh_token:
+        type: string
+    type: object
   schema.EducationResponseSchema:
     properties:
       activities:
@@ -187,9 +201,91 @@ definitions:
       title:
         type: string
     type: object
+  schema.UserCreateSchema:
+    properties:
+      email:
+        type: string
+      password:
+        minLength: 8
+        type: string
+      username:
+        type: string
+    required:
+    - email
+    - password
+    - username
+    type: object
+  schema.UserResponseSchema:
+    properties:
+      bio:
+        type: string
+      createdAt:
+        type: string
+      email:
+        type: string
+      id:
+        type: string
+      name:
+        type: string
+      profileImageURL:
+        type: string
+      updatedAt:
+        type: string
+      username:
+        type: string
+    type: object
+  schema.UserUpdateSchema:
+    properties:
+      bio:
+        type: string
+      email:
+        type: string
+      name:
+        type: string
+      username:
+        type: string
+    type: object
 info:
   contact: {}
 paths:
+  /auth/login:
+    post:
+      consumes:
+      - application/json
+      description: get tokens
+      parameters:
+      - description: login credentials info
+        in: body
+        name: credentials
+        required: true
+        schema:
+          $ref: '#/definitions/auth.LoginCredentials'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/auth.LoginResponse'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/schema.Error'
+        "401":
+          description: Unauthorized
+          schema:
+            $ref: '#/definitions/schema.Error'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/schema.Error'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/schema.Error'
+      summary: login
+      tags:
+      - Auth
   /resumes:
     get:
       description: get all resumes
@@ -239,8 +335,8 @@ paths:
       produces:
       - application/json
       responses:
-        "200":
-          description: OK
+        "201":
+          description: Created
           schema:
             properties:
               resume:
@@ -370,4 +466,150 @@ paths:
       summary: update resume by id
       tags:
       - Resume
+  /users:
+    post:
+      consumes:
+      - application/json
+      description: create new user
+      parameters:
+      - description: initial values of user
+        in: body
+        name: user
+        required: true
+        schema:
+          $ref: '#/definitions/schema.UserCreateSchema'
+      produces:
+      - application/json
+      responses:
+        "201":
+          description: Created
+          schema:
+            properties:
+              user:
+                $ref: '#/definitions/schema.UserResponseSchema'
+            type: object
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/schema.Error'
+        "409":
+          description: Conflict
+          schema:
+            $ref: '#/definitions/schema.Error'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/schema.Error'
+      summary: create new user
+      tags:
+      - User
+  /users/{id}:
+    delete:
+      description: delete user by id
+      parameters:
+      - description: User ID, Pass 'me' to delete your data.
+        in: path
+        name: id
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "204":
+          description: No Content
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/schema.Error'
+        "403":
+          description: Forbidden
+          schema:
+            $ref: '#/definitions/schema.Error'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/schema.Error'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/schema.Error'
+      summary: delete user by id
+      tags:
+      - User
+    get:
+      description: get user info by id
+      parameters:
+      - description: User ID, Pass 'me' to retrieve your data.
+        in: path
+        name: id
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            properties:
+              user:
+                $ref: '#/definitions/schema.UserResponseSchema'
+            type: object
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/schema.Error'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/schema.Error'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/schema.Error'
+      summary: get user info by id
+      tags:
+      - User
+    patch:
+      description: update user data by id
+      parameters:
+      - description: User ID, Pass 'me' to delete your data.
+        in: path
+        name: id
+        required: true
+        type: string
+      - description: update values of User
+        in: body
+        name: user
+        required: true
+        schema:
+          $ref: '#/definitions/schema.UserUpdateSchema'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            properties:
+              user:
+                $ref: '#/definitions/schema.UserResponseSchema'
+            type: object
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/schema.Error'
+        "403":
+          description: Forbidden
+          schema:
+            $ref: '#/definitions/schema.Error'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/schema.Error'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/schema.Error'
+      summary: update user data by id
+      tags:
+      - User
 swagger: "2.0"
